--- a/final-project/confirmation.html
+++ b/final-project/confirmation.html
@@ -41,8 +41,10 @@
     </ul>
   </nav>
 
-<main>
-  <h2>Confirmation</h2>
+<main class="confirm">
+  <h2>Request received</h2>
+  <p>It is a pleasure to have you with us.</p>
+  <p>Soon we will send you an email about your reservation request.</p>
 </main>
 
   <footer>
