--- a/final-project/temples.html
+++ b/final-project/temples.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles/large.css">
   <link rel="stylesheet" href="styles/medium.css">
   <link rel="stylesheet" href="styles/small.css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat%7cRaleway%7cRoboto&display=swap" rel="stylesheet">
   <script src="functions/dateVerify.js"></script>
   <script src="functions/Menu.js"></script>
   <script src="functions/temples.js"></script>
