--- a/final-project/temples.html
+++ b/final-project/temples.html
@@ -379,7 +379,7 @@
         <h4>Closure</h4>
         <p>Closure</p>
         <h4>Local weather</h4>
-        <p>Weather</p>
+        <p id="temp1"></p>
 
       </div>
       <a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple?lang=eng" target="_blank">More
@@ -396,6 +396,7 @@
     <p id="line4"><span id="currentDate"></span></p>
   </footer>
 
+  <script src="functions/weather.js"></script>  
 </body>
 
 </html>
