--- a/final-project/temples.html
+++ b/final-project/temples.html
@@ -111,7 +111,8 @@
         <h4>Closure</h4>
         <p>Closure</p>
         <h4>Local weather</h4>
-        <p>Weather</p>
+        <p id="temp_ctba"></p>
+        <p id="cond_ctba"></p>
 
       </div>
       <a href="https://www.churchofjesuschrist.org/temples/details/curitiba-brazil-temple?lang=eng" target="_blank">More
@@ -181,7 +182,8 @@
         <h4>Closure</h4>
         <p>Closure</p>
         <h4>Local weather</h4>
-        <p>Weather</p>
+        <p id="temp_poa"></p>
+        <p id="cond_poa"></p>
 
       </div>
       <a href="https://www.churchofjesuschrist.org/temples/details/porto-alegre-brazil-temple?lang=eng" target="_blank">More
@@ -294,7 +296,8 @@
         <h4>Closure</h4>
         <p>Closure</p>
         <h4>Local weather</h4>
-        <p>Weather</p>
+        <p id="temp_camp"></p>
+        <p id="cond_camp"></p>
 
       </div>
       <a href="https://www.churchofjesuschrist.org/temples/details/campinas-brazil-temple?lang=eng" target="_blank">More
@@ -379,7 +382,9 @@
         <h4>Closure</h4>
         <p>Closure</p>
         <h4>Local weather</h4>
-        <p id="temp1"></p>
+        <p id="temp_spaul"></p>
+        <p id="cond_spaul"></p>
+
 
       </div>
       <a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple?lang=eng" target="_blank">More
