--- a/final-project/temples.html
+++ b/final-project/temples.html
@@ -70,43 +70,35 @@
 
         <h4>Baptims Schedule</h4>
         <p>Tuesday to Friday</p>
-        <table class="period">
-          <tr>
-            <td>9:00 AM - 6:00 PM</td>
-            <td>6:00 PM - 9:00 PM</td>
-          </tr>
-        </table>
+        <div class="period">
+          <p>9:00 AM - 6:00 PM</td>
+            <p>6:00 PM - 9:00 PM</p>
+        </div>
         <p>Saturday</p>
-        <table class="period">
-        <tr>
-          <td>7:30 AM - 3:30 PM</td>
-        </tr>
-        </table>
+        <div class="period">
+          <p>7:30 AM - 3:30 PM</p>
+        </div>
 
         <h4>Endowments Schedule</h4>
         <p>Tuesday to Friday</p>
-        <table class="startTime">
-          <tr>
-            <td>9:00 AM</td>
-            <td>10:15 AM</td>
-            <td>12:00 PM</td>
-            <td>2:30 PM</td>
-            <td>4:30 PM</td>
-            <td>6:45 PM</td>
-            <td>8:00 PM</td>
-          </tr>
-        </table>
+        <div class="startTime">
+          <p>9:00 AM</p>
+          <p>10:15 AM</p>
+          <p>12:00 PM</p>
+          <p>2:30 PM</p>
+          <p>4:30 PM</p>
+          <p>6:45 PM</p>
+          <p>8:00 PM</p>
+        </div>
         <p>Saturday</p>
-        <table class="startTime">
-          <tr>
-            <td>7:30 AM</td>
-            <td>8:45 AM</td>
-            <td>10:00 AM</td>
-            <td>12:00 PM</td>
-            <td>1:15 PM</td>
-            <td>3:00 PM</td>
-          </tr>
-        </table>
+        <div class="startTime">
+            <p>7:30 AM</p>
+            <p>8:45 AM</p>
+            <p>10:00 AM</p>
+            <p>12:00 PM</p>
+            <p>1:15 PM</p>
+            <p>3:00 PM</p>
+        </div>
 
         <h4>Closure</h4>
         <p>Closure</p>
@@ -123,10 +115,14 @@
       <img src="images/portoalegre.jpg" alt="LDS Temple in Porto Alegre">
       <div class="textTemple">
         <h3>Porto Alegre, Brazil Temple</h3>
-        <p>The Porto Alegre Brazil Temple is the 102nd operating temple of The Church of Jesus Christ of Latter-day Saints. The temple construction began on May 2, 1998. The temple was dedicated by LDS Church president Gordon B. Hinckley on December 17, 2000. The temple sits on a hill in Porto Alegre's Vila Jardim district.</p>
-        <p>The Porto Alegre Temple overlooks the city from the east toward a large river and port for which the city is named. It has an exterior of white granite and a single spire topped with a statue of the angel Moroni. The temple has a total of 10,700 square feet (990 m2), two ordinance rooms, and two sealing rooms.</p>
+        <p>The Porto Alegre Brazil Temple is the 102nd operating temple of The Church of Jesus Christ of Latter-day
+          Saints. The temple construction began on May 2, 1998. The temple was dedicated by LDS Church president Gordon
+          B. Hinckley on December 17, 2000. The temple sits on a hill in Porto Alegre's Vila Jardim district.</p>
+        <p>The Porto Alegre Temple overlooks the city from the east toward a large river and port for which the city is
+          named. It has an exterior of white granite and a single spire topped with a statue of the angel Moroni. The
+          temple has a total of 10,700 square feet (990 m2), two ordinance rooms, and two sealing rooms.</p>
         <p>The Porto Alegre Temple was the last temple of the LDS Church to be dedicated in the 20th century.</p>
-        </div>
+      </div>
 
       <div class="infoTemple">
         <h4>Address</h4>
@@ -144,40 +140,32 @@
 
         <h4>Baptims Schedule</h4>
         <p>Tuesday to Friday</p>
-        <table class="period">
-          <tr>
-            <td>3:00 PM - 10:00 PM</td>
-          </tr>
-        </table>
+        <div class="period">
+          <p>3:00 PM - 10:00 PM</p>
+        </div>
         <p>Saturday</p>
-        <table class="period">
-          <tr>
-            <td>8:00 AM - 12:00 PM</td>
-            <td>1:00 PM - 4:00 PM</td>
-          </tr>
-        </table>
+        <div class="period">
+          <p>8:00 AM - 12:00 PM</p>
+          <p>1:00 PM - 4:00 PM</p>
+        </div>
 
         <h4>Endowments Schedule</h4>
         <p>Tuesday to Friday</p>
-        <table class="startTime">
-          <tr>
-            <td>1:30 PM</td>
-            <td>3:00 PM</td>
-            <td>4:30 PM</td>
-            <td>6:30 PM</td>
-            <td>8:00 PM</td>
-          </tr>
-        </table>
+        <div class="startTime">
+          <p>1:30 PM</p>
+          <p>3:00 PM</p>
+          <p>4:30 PM</p>
+          <p>6:30 PM</p>
+          <p>8:00 PM</p>
+        </div>
         <p>Saturday</p>
-        <table class="startTime">
-          <tr>
-            <td>8:00 AM</td>
-            <td>9:30 AM</td>
-            <td>11:15 AM</td>
-            <td>12:30 PM</td>
-            <td>2:00 PM</td>
-          </tr>
-        </table>
+        <div class="startTime">
+          <p>8:00 AM</p>
+          <p>9:30 AM</p>
+          <p>11:15 AM</p>
+          <p>12:30 PM</p>
+          <p>2:00 PM</p>
+        </div>
 
         <h4>Closure</h4>
         <p>Closure</p>
@@ -186,7 +174,8 @@
         <p id="cond_poa"></p>
 
       </div>
-      <a href="https://www.churchofjesuschrist.org/temples/details/porto-alegre-brazil-temple?lang=eng" target="_blank">More
+      <a href="https://www.churchofjesuschrist.org/temples/details/porto-alegre-brazil-temple?lang=eng"
+        target="_blank">More
         information about the Porto Alegre Temple</a>
     </section>
 
@@ -223,84 +212,58 @@
 
         <h4>Baptims Schedule</h4>
         <p>Tuesday to Friday</p>
-        <table class="period">
-          <tr>
-            <td>9:00 AM - 10:00 AM</td>
-            <td>10:30 AM - 11:30 AM</td>
-            <td>12:00 PM - 1:00 PM</td>
-            <td>1:30 PM - 2:30 PM</td>
-          </tr>
-          <tr>
-            <td>3:00 PM - 4:00 PM</td>
-            <td>4:30 PM - 5:30 PM</td>
-            <td>6:00 PM - 7:00 PM</td>
-            <td>7:30 PM - 8:30 PM</td>
-          </tr>
-          <tr>
-            <td>8:30 PM - 9:30 PM</td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
+        <div class="period">
+          <p>9:00 AM - 10:00 AM</p>
+          <p>10:30 AM - 11:30 AM</p>
+          <p>12:00 PM - 1:00 PM</p>
+          <p>1:30 PM - 2:30 PM</p>
+          <p>3:00 PM - 4:00 PM</p>
+          <p>4:30 PM - 5:30 PM</p>
+          <p>6:00 PM - 7:00 PM</p>
+          <p>7:30 PM - 8:30 PM</p>
+          <p>8:30 PM - 9:30 PM</p>
+        </div>
         <p>Saturday</p>
-        <table class="period">
-          <tr>
-            <td>7:30 AM - 8:30 AM</td>
-            <td>9:00 AM - 10:00 AM</td>
-            <td>10:30 AM - 11:30 AM</td>
-            <td>12:00 PM - 1:00 PM</td>
-          </tr>
-          <tr>
-            <td>1:30 PM - 2:30 PM</td>
-            <td>3:00 PM - 5:30 PM</td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
+        <div class="period">
+          <p>7:30 AM - 8:30 AM</p>
+          <p>9:00 AM - 10:00 AM</p>
+          <p>10:30 AM - 11:30 AM</p>
+          <p>12:00 PM - 1:00 PM</p>
+          <p>1:30 PM - 2:30 PM</p>
+          <p>3:00 PM - 5:30 PM</p>
+        </div>
 
         <h4>Endowments Schedule</h4>
         <p>Tuesday to Friday</p>
-        <table class="startTime">
-          <tr>
-            <td>9:00 AM</td>
-            <td>10:00 AM</td>
-            <td>11:00 AM</td>
-            <td>1:00 PM</td>
-            <td>2:00 PM</td>
-            <td>3:00 PM</td>
-            <td>4:00 PM</td>
-          </tr>
-          <tr>
-            <td>7:00 PM</td>
-            <td>7:40 PM</td>
-            <td>8:20 PM</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
+        <div class="startTime">
+          <p>9:00 AM</p>
+          <p>10:00 AM</p>
+          <p>11:00 AM</p>
+          <p>1:00 PM</p>
+          <p>2:00 PM</p>
+          <p>3:00 PM</p>
+          <p>4:00 PM</p>
+          <p>7:00 PM</p>
+          <p>7:40 PM</p>
+          <p>8:20 PM</p>
+        </div>
         <p>Saturday</p>
-        <table class="startTime">
-          <tr>
-            <td>7:00 AM</td>
-            <td>7:40 AM</td>
-            <td>8:20 AM</td>
-            <td>9:00 AM</td>
-            <td>9:40 AM</td>
-            <td>10:20 AM</td>
-            <td>11:00 AM</td>
-          </tr>
-          <tr>
-            <td>11:40 AM</td>
-            <td>12:20 PM</td>
-            <td>1:00 PM</td>
-            <td>1:40 PM</td>
-            <td>2:20 PM</td>
-            <td>3:00 PM</td>
-            <td></td>
-          </tr>
+        <div class="startTime">
+          <p>7:00 AM</p>
+          <p>7:40 AM</p>
+          <p>8:20 AM</p>
+          <p>9:00 AM</p>
+          <p>9:40 AM</p>
+          <p>10:20 AM</p>
+          <p>11:00 AM</p>
+          <p>11:40 AM</p>
+          <p>12:20 PM</p>
+          <p>1:00 PM</p>
+          <p>1:40 PM</p>
+          <p>2:20 PM</p>
+          <p>3:00 PM</p>
+        </div>
+
         </table>
 
         <h4>Closure</h4>
@@ -318,9 +281,19 @@
       <img src="images/saopaulo.jpg" alt="LDS Temple in São Paulo">
       <div class="textTemple">
         <h3>São Paulo, Brazil Temple</h3>
-        <p>The São Paulo Brazil Temple (formerly the São Paulo Temple) is the 19th constructed and 17th operating temple of The Church of Jesus Christ of Latter-day Saints. Located in the Brazilian city of São Paulo, it was the first LDS temple built in South America, and also the first temple to use the single story, single spire design. The spire is 101 feet (31 m) tall.</p>
-        <p>The intention to construct a temple in São Paulo was announced by the LDS Church on March 1, 1975, with construction beginning twelve months later. Hundreds of local church members gathered to clear the site, which included removing brush, weeds, and banana trees. Hundreds more members donated their time to produce fifty thousand blocks of cast stone composed of quartz, marble chips, and white concrete for the exterior of the temple. It was dedicated on October 30, 1978, by church president Spencer W. Kimball. The temple has two ordinance rooms and four sealing rooms, and has a total floor area of 59,246 square feet (5,504 m²).</p>
-        <p>On August 20, 2003, a gold-leafed statue of the angel Moroni was added to the temple during an extensive renovation and enlargement project 25 years after its dedication. Church president Gordon B. Hinckley rededicated the São Paulo Brazil Temple on February 22, 2004.</p>
+        <p>The São Paulo Brazil Temple (formerly the São Paulo Temple) is the 19th constructed and 17th operating temple
+          of The Church of Jesus Christ of Latter-day Saints. Located in the Brazilian city of São Paulo, it was the
+          first LDS temple built in South America, and also the first temple to use the single story, single spire
+          design. The spire is 101 feet (31 m) tall.</p>
+        <p>The intention to construct a temple in São Paulo was announced by the LDS Church on March 1, 1975, with
+          construction beginning twelve months later. Hundreds of local church members gathered to clear the site, which
+          included removing brush, weeds, and banana trees. Hundreds more members donated their time to produce fifty
+          thousand blocks of cast stone composed of quartz, marble chips, and white concrete for the exterior of the
+          temple. It was dedicated on October 30, 1978, by church president Spencer W. Kimball. The temple has two
+          ordinance rooms and four sealing rooms, and has a total floor area of 59,246 square feet (5,504 m²).</p>
+        <p>On August 20, 2003, a gold-leafed statue of the angel Moroni was added to the temple during an extensive
+          renovation and enlargement project 25 years after its dedication. Church president Gordon B. Hinckley
+          rededicated the São Paulo Brazil Temple on February 22, 2004.</p>
       </div>
 
       <div class="infoTemple">
@@ -340,63 +313,42 @@
 
         <h4>Baptims Schedule</h4>
         <p>Tuesday to Friday</p>
-        <table class="period">
-          <tr>
-            <td>9:00 AM - 6:00 PM</td>
-            <td>6:00 PM - 10:00 PM</td>
-          </tr>
-        </table>
+        <div class="period">
+          <p>9:00 AM - 6:00 PM</p>
+          <p>6:00 PM - 10:00 PM</p>
+        </div>
         <p>Saturday</p>
-        <table class="period">
-          <tr>
-            <td>7:00 AM - 2:00 PM</td>
-            <td>2:00 PM - 5:00 PM</td>
-          </tr>
-        </table>
+        <div class="period">
+          <p>7:00 AM - 2:00 PM</p>
+          <p>2:00 PM - 5:00 PM</p>
+        </div>
 
         <h4>Endowments Schedule</h4>
         <p>Tuesday to Friday</p>
-        <table class="startTime">
-          <tr>
-            <td>8:30 AM</td>
-            <td>9:30 AM</td>
-            <td>10:30 AM</td>
-            <td>11:45 AM</td>
-            <td>2:00 PM</td>
-            <td>3:15 PM</td>
-            <td>5:15 PM</td>
-          </tr>
-          <tr>
-            <td>6:30 PM</td>
-            <td>7:30 PM</td>
-            <td>8:30 PM</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
+        <div class="startTime">
+          <p>8:30 AM</p>
+          <p>9:30 AM</p>
+          <p>10:30 AM</p>
+          <p>11:45 AM</p>
+          <p>2:00 PM</p>
+          <p>3:15 PM</p>
+          <p>5:15 PM</p>
+          <p>6:30 PM</p>
+          <p>7:30 PM</p>
+          <p>8:30 PM</p>
+        </div>
         <p>Saturday</p>
-        <table class="startTime">
-          <tr>
-            <td>7:00 AM</td>
-            <td>8:00 AM</td>
-            <td>9:00 AM</td>
-            <td>10:00 AM</td>
-            <td>11:15 AM</td>
-            <td>12:30 PM</td>
-            <td>1:30 PM</td>
-          </tr>
-          <tr>
-            <td>2:45 PM</td>
-            <td>3:30 PM</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
+        <div class="startTime">
+          <p>7:00 AM</p>
+          <p>8:00 AM</p>
+          <p>9:00 AM</p>
+          <p>10:00 AM</p>
+          <p>11:15 AM</p>
+          <p>12:30 PM</p>
+          <p>1:30 PM</p>
+          <p>2:45 PM</p>
+          <p>3:30 PM</p>
+        </div>
 
         <h4>Closure</h4>
         <p>Closure</p>
@@ -406,7 +358,8 @@
 
 
       </div>
-      <a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple?lang=eng" target="_blank">More
+      <a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple?lang=eng"
+        target="_blank">More
         information about the São Paulo Temple</a>
     </section>
   </main>
@@ -416,11 +369,13 @@
     <p id="line1">&copy; <span id="currentYear"></span> | Diogo A. Parente | Brazil | <a
         href="https://www.byui.edu/online" target="_blank">BYU-I Online
         Learning</a></p>
+    <p id="line2">Information about the weather provided by <a href="https://openweathermap.org" target="_blank"> Open
+        Weather Map</a></p>
     <p id="line3">Last updated: <span id="dateModified"></span></p>
     <p id="line4"><span id="currentDate"></span></p>
   </footer>
 
-  <script src="functions/weather.js"></script>  
+  <script src="functions/weather.js"></script>
 </body>
 
 </html>
