--- a/final-project/temples.html
+++ b/final-project/temples.html
@@ -37,7 +37,7 @@
       <li><a href="index.html">Home</a></li>
       <li><a id="active-page">Temples</a></li>
       <li><a href="reservation.html">Reservation</a></li>
-      <li><a href="services.html">Services</a></li>
+      <li><a href="#">Services</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
@@ -100,8 +100,6 @@
             <p>3:00 PM</p>
         </div>
 
-        <h4>Closure</h4>
-        <p>Closure</p>
         <h4>Local weather</h4>
         <p id="temp_ctba"></p>
         <p id="cond_ctba"></p>
@@ -167,8 +165,6 @@
           <p>2:00 PM</p>
         </div>
 
-        <h4>Closure</h4>
-        <p>Closure</p>
         <h4>Local weather</h4>
         <p id="temp_poa"></p>
         <p id="cond_poa"></p>
@@ -264,10 +260,6 @@
           <p>3:00 PM</p>
         </div>
 
-        </table>
-
-        <h4>Closure</h4>
-        <p>Closure</p>
         <h4>Local weather</h4>
         <p id="temp_camp"></p>
         <p id="cond_camp"></p>
@@ -350,12 +342,9 @@
           <p>3:30 PM</p>
         </div>
 
-        <h4>Closure</h4>
-        <p>Closure</p>
         <h4>Local weather</h4>
         <p id="temp_spaul"></p>
         <p id="cond_spaul"></p>
-
 
       </div>
       <a href="https://www.churchofjesuschrist.org/temples/details/sao-paulo-brazil-temple?lang=eng"
